worker-macros/tests/ui/scheduled-wrong-param-count.stderr
error: custom attribute panicked
 --> tests/ui/scheduled-wrong-param-count.rs:3:1
  |
3 | #[event(scheduled)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the `scheduled` handler should be a function with 3 arguments but found 0
